Fixed an issue with z-index which was leading to problems with navbar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -119,6 +119,7 @@ nav ul a {
 	color:#9e9e9e;
 	text-decoration: none;
 	font-family: 'Source Sans Pro', sans-serif;
+	z-index: 99;
 }
 
 nav ul a:hover {
@@ -133,6 +134,7 @@ nav ul li {
 	list-style-type: none;
 	display: inline-block;
 	width:120px;
+	z-index: 99;
 }
 
 .fixednav {
@@ -260,7 +262,7 @@ nav ul li {
 	position: absolute;
 	top:100%;
 	left:0%;
-	z-index: 1;
+	z-index: -5;
 }
 
 .lesson1 h2 {
@@ -327,6 +329,33 @@ nav ul li {
 	margin-top: 30px;
 	text-align: center;
 	margin-bottom: 30px;
+}
+
+/*LESSON TWO*/
+
+.lesson2 {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	top:200%;
+	left: 0%;
+}
+
+.lesson2 h2 {
+	background-color: rgba(186,218,85,0.8);
+	border-radius: 25px;
+	display: inline-block;
+	padding:7px;
+	border:1px solid black;
+	/*margin-top: 50px;*/
+	font-weight:bold;
+	font-size: 24px;
+	font-family: 'Source Sans Pro', sans-serif;
+	margin-top: 85px;
+	/*margin:0 auto;*/
+	/*margin-left: 10%;*/
+	position: relative;
+	z-index: 0;
 }
 
 /*RESPONSIVE DESIGN*/
